Updates github link

--- a/popup.html
+++ b/popup.html
@@ -387,7 +387,7 @@
     <button id="showSettings">Settings</button>
     <footer>
       <a href="https://discord.gg/zAZ8p9ARqC" target="_blank" id="discordLink">Discord</a>
-      <a href="https://github.com/ar-io" target="_blank" id="githubLink">GitHub</a>
+      <a href="https://github.com/ar-io/wayfinder" target="_blank" id="githubLink">GitHub</a>
       <a href="https://viewblock.io/arweave/contract/bLAgYxAdX2Ry-nt6aH2ixgvJXbpsEYm28NgJgyqfs-U" target="_blank" id="contractLink">Contract</a>
     </footer>
 </body>
