(WIP) Adds setting for custom GAR cache url

--- a/popup.html
+++ b/popup.html
@@ -483,6 +483,11 @@
         <input type="text" id="staticGateway" placeholder="e.g. https://ar-io.dev">
         <button id="saveStaticGateway">✔</button>
       </div>
+      <div class="setting">
+        <label for="garCacheURL">GAR Cache URL:</label>
+        <input type="text" id="garCacheURL" placeholder="e.g. https://dev.arns.app/v1/contract/E-pRI1bokGWQBqHnbut9rsHSt9Ypbldos3bAtwg4JMc/gateways">
+        <button id="saveGarCacheURL">✔</button>
+      </div>
     </div>
     <button id="showGateways">Gateway Address Registry</button>
     <button id="showHistory">Usage History</button>
