Updates contract link to test contract

--- a/popup.html
+++ b/popup.html
@@ -74,7 +74,7 @@
     <footer>
       <a href="https://discord.gg/zAZ8p9ARqC" target="_blank" id="discordLink">Discord</a>
       <a href="https://github.com/ar-io/wayfinder" target="_blank" id="githubLink">GitHub</a>
-      <a href="https://viewblock.io/arweave/contract/bLAgYxAdX2Ry-nt6aH2ixgvJXbpsEYm28NgJgyqfs-U" target="_blank" id="contractLink">Contract</a>
+      <a href="https://viewblock.io/arweave/contract/E-pRI1bokGWQBqHnbut9rsHSt9Ypbldos3bAtwg4JMc" target="_blank" id="contractLink" title="SmartWeave Contract">Contract</a>
     </footer>
 </body>
 </html>
