Adds titles to elements for extra descriptions

--- a/popup.html
+++ b/popup.html
@@ -62,18 +62,18 @@
         <div class="modal-content">
             <span class="close-btn" tabindex="0" title="Close">&times;</span>
             <h2>Gateway Details</h2>
-            <p><strong><a id="modal-gateway-url" href="#" target="_blank">url...</a></strong></p>
-            <p><strong>Gateway Address:</strong> <a id="modal-gateway-address" href="#" target="_blank">shortened_address...</a></p>
-            <p><strong>Stake:</strong> <span id="modal-stake">placeholder_stake_value</span></p>
-            <p><strong>Network Status:</strong> <span id="modal-status">placeholder_status</span></p>
-            <p><strong>Joined Since:</strong> <span id="modal-start">placeholder_start_date</span></p>
-            <p><strong>Gateway Properties:</strong> <a id="modal-properties" href="#" target="_blank">shortened_properties...</a></p>
-            <p id="modal-note">placeholder_note</p>
+            <p title="The root domain of this gateway.  Click to view details."><strong><a id="modal-gateway-url" href="#" target="_blank">url...</a></strong></p>
+            <p title="The unique address of the gateway. Click to view details on from Viewblock."><strong>Gateway Address:</strong> <a id="modal-gateway-address" href="#" target="_blank">shortened_address...</a></p>
+            <p title="The amount of stake committed by this gateway. This indicates the gateway's vested interest in the network."><strong>Stake:</strong> <span id="modal-stake">placeholder_stake_value</span></p>
+            <p title="The current operational status of the gateway in the network."><strong>Network Status:</strong> <span id="modal-status">placeholder_status</span></p>
+            <p title="The block height when this gateway joined the network."><strong>Joined Since:</strong> <span id="modal-start">placeholder_start_date</span></p>
+            <p title="Special properties or features of the gateway. Click to view details from Viewblock."><strong>Gateway Properties:</strong> <a id="modal-properties" href="#" target="_blank">shortened_properties...</a></p>            
+            <p title="A note from the gateway operator." id="modal-note">placeholder_note</p>
         </div>
     </div>
     <footer>
-      <a href="https://discord.gg/zAZ8p9ARqC" target="_blank" id="discordLink">Discord</a>
-      <a href="https://github.com/ar-io/wayfinder" target="_blank" id="githubLink">GitHub</a>
+      <a href="https://discord.gg/zAZ8p9ARqC" target="_blank" id="discordLink" title="Join the community discussion">Discord</a>
+      <a href="https://github.com/ar-io/wayfinder" target="_blank" id="githubLink" title="Wayfinder source code">GitHub</a>
       <a href="https://viewblock.io/arweave/contract/E-pRI1bokGWQBqHnbut9rsHSt9Ypbldos3bAtwg4JMc" target="_blank" id="contractLink" title="SmartWeave Contract">Contract</a>
     </footer>
 </body>
