chore: fix bad css and shrink refresh button

--- a/popup.html
+++ b/popup.html
@@ -20,9 +20,9 @@
       <div id="gatewayListHeader" style="display:none;">
         <span class="online-gateways">Online: <span id="onlineGatewayCount">0</span></span>
         <span class="total-gateways">Total: <span id="totalGatewayCount">0</span></span>
+        <span class="refresh-gateways"><span id="refreshGateways"><a href="#" id="refreshIcon" title="Refresh the gateway address registry">↺</a></span></span>
       </div>
       <ul id="gatewayList" style="display:none;"></ul>
-      <button id="refreshGateways" style="display:none;">Refresh Status</button>
     </div>
     <h2 id="historyListTitle" style="display:none;">Usage History</h2>
     <ul id="historyList" style="display:none;"></ul>
