Adds optimized gateway refreshing and new top 5 route method

--- a/popup.html
+++ b/popup.html
@@ -39,6 +39,7 @@
       <div class="setting">
         <label for="routingToggle" title="Switch the ar:// routing protocol Wayfinder uses.">Routing Method:</label>
         <select id="routingToggle">
+            <option value="topFiveStake" title="Route to one of the top 5 staked gateways.">Random Top 5 Stake</option>
             <option value="stakeRandom" title="Route to gateways based on a weighted list by stake.">Stake-weighted Random</option>
             <option value="highestStake" title="Route to the gateway with the highest stake.">Highest Stake</option>
             <option value="random" title="Route to a random gateway.">Random</option>
