Adds gateway blacklist capability

--- a/popup.html
+++ b/popup.html
@@ -70,6 +70,7 @@
             <p title="The block height when this gateway joined the network."><strong>Joined Since:</strong> <span id="modal-start">placeholder_start_date</span></p>
             <p title="Special properties or features of the gateway. Click to view details from Viewblock."><strong>Gateway Properties:</strong> <a id="modal-properties" href="#" target="_blank">shortened_properties...</a></p>            
             <p title="A note from the gateway operator." id="modal-note">placeholder_note</p>
+            <button id="blacklistButton">Blacklist Gateway</button>
         </div>
     </div>
     <footer>
