feat: adds grr and orr to gateway stats page

--- a/popup.html
+++ b/popup.html
@@ -64,7 +64,10 @@
             <span class="close-btn" tabindex="0" title="Close">&times;</span>
             <h2>Gateway Details</h2>
             <p title="The root domain of this gateway.  Click to view details."><strong><a id="modal-gateway-url" href="#" target="_blank">url...</a></strong></p>
-            <p title="The unique address of the gateway. Click to view details on from Viewblock."><strong>Gateway Address:</strong> <a id="modal-gateway-address" href="#" target="_blank">shortened_address...</a></p>
+            <p title="How often this gateway receives AR.IO Network protocol rewards."><strong>Gateway Reward Ratio:</strong> <span id="modal-gateway-grr">placeholder_gateway_reward_ratio</span></p>
+            <p title="How often this gateway receives AR.IO Network protocol rewards for observing and reporting on the network."><strong>Observer Reward Ratio:</strong> <span id="modal-gateway-orr">placeholder_observer_reward_ratio</span></p>
+            <p title="The unique wallet address of the gateway. Click to view details on from Viewblock."><strong>Gateway Address:</strong> <a id="modal-gateway-wallet" href="#" target="_blank">shortened_address...</a></p>
+            <p title="The unique wallet address of the gateway's observer. Click to view details on from Viewblock."><strong>Observer Address:</strong> <a id="modal-observer-wallet" href="#" target="_blank">shortened_address...</a></p>
             <p title="The amount of stake committed by this gateway. This indicates the gateway's vested interest in the network."><strong>Stake:</strong> <span id="modal-stake">placeholder_stake_value</span></p>
             <p title="The current operational status of the gateway in the network."><strong>Network Status:</strong> <span id="modal-status">placeholder_status</span></p>
             <p title="The block height when this gateway joined the network."><strong>Joined Since:</strong> <span id="modal-start">placeholder_start_date</span></p>
