feat:add typescript

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
     <title>AR.IO WayFinder</title>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <script src="popup.js"></script>
+    <script src="dist/popup.js"></script>
 </head>
 <body>
     <div id="aboutSection">
