fix(build): fix webpack build
There is still an issue when loading the unpacked extension into chrome, but this gets you a build with everything in the `dist` diretory

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
     <title>AR.IO WayFinder</title>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <script type="module" src="dist/popup.js"></script>
+    <script src="popup.js"></script>  
 </head>
 <body>
     <div id="aboutSection">
