feat:add support for changing process id

--- a/src/popup.html
+++ b/src/popup.html
@@ -108,16 +108,16 @@
       </div>
       <div class="setting">
         <label
-          for="garCacheURL"
-          title="Configure a different URL that serves Gateway Address Registry cache."
-          >GAR Cache URL:</label
+          for="arIOProcessId"
+          title="Configure a different AR.IO Process ID that serves as the source for the Gateway Address Registry."
+          >AR.IO Process ID:</label
         >
         <input
           type="text"
-          id="garCacheURL"
-          placeholder="e.g. https://dev.arns.app/v1/contract/bLAgYxAdX2Ry-nt6aH2ixgvJXbpsEYm28NgJgyqfs-U/gateways"
+          id="arIOProcessId"
+          placeholder="e.g. agYcCFJtrMG6cqMuZfskIkFTGvUPddICmtQSBIoPdiA"
         />
-        <button id="saveGarCacheURL">✔</button>
+        <button id="saveArIOProcessId">✔</button>
       </div>
     </div>
     <button id="showGateways">Gateway Address Registry</button>
