updates to latest sdk

--- a/src/popup.html
+++ b/src/popup.html
@@ -204,15 +204,15 @@
         href="https://github.com/ar-io/wayfinder"
         target="_blank"
         id="githubLink"
-        title="Wayfinder source code"
-        >GitHub</a
+        title="Wayfinder Source Code"
+        >Github</a
       >
       <a
-        href="https://viewblock.io/arweave/contract/bLAgYxAdX2Ry-nt6aH2ixgvJXbpsEYm28NgJgyqfs-U"
+        href="https://github.com/ar-io/ar-io-network-process"
         target="_blank"
-        id="contractLink"
-        title="SmartWeave Contract"
-        >Contract</a
+        id="contractCodeLink"
+        title="AR.IO Network Testnet AO Process"
+        >Network</a
       >
     </footer>
   </body>
