Shows total stake, operator stake and delegated stake

--- a/src/popup.html
+++ b/src/popup.html
@@ -165,9 +165,21 @@
         <p
           title="The amount of stake committed by this gateway. This indicates the gateway's vested interest in the network."
         >
-          <strong>Stake:</strong>
-          <span id="modal-stake">placeholder_stake_value</span>
+          <strong>Total Stake:</strong>
+          <span id="modal-total-stake">placeholder_stake_value</span>
         </p>
+        <p
+        title="The amount of stake committed by the operator of gateway. This indicates the operators's vested interest in the service of this gateway."
+        >
+        <strong>Operator Stake:</strong>
+        <span id="modal-operator-stake">placeholder_stake_value</span>
+      </p>
+      <p
+      title="The amount of stake delegated to this gateway. This indicates the communities's vested interest in this gateway."
+    >
+      <strong>Delegated Stake:</strong>
+      <span id="modal-delegated-stake">placeholder_stake_value</span>
+    </p>
         <p
           title="The current operational status of the gateway in the network."
         >
