feat: more performance based routing

--- a/src/popup.html
+++ b/src/popup.html
@@ -71,6 +71,12 @@
         >
         <select id="routingToggle">
           <option
+            value="optimalGateway"
+            title="Route to the most optimal gateway based on onchain and offchain performance indicators."
+          >
+            Most Optimal Gateway
+          </option>
+          <option
             value="topFiveStake"
             title="Route to one of the top 5 staked gateways."
           >
