feat:can set AO CU url

--- a/src/popup.html
+++ b/src/popup.html
@@ -127,7 +127,7 @@
       <div class="setting">
         <label
           for="arIOProcessId"
-          title="Configure a different AR.IO Process ID that serves as the source for the Gateway Address Registry."
+          title="Configure a different AR.IO Process ID for the Gateway Address Registry."
           >AR.IO Process ID:</label
         >
         <input
@@ -136,6 +136,19 @@
           placeholder="e.g. agYcCFJtrMG6cqMuZfskIkFTGvUPddICmtQSBIoPdiA"
         />
         <button id="saveArIOProcessId">✔</button>
+      </div>
+      <div class="setting">
+        <label
+          for="aoCuUrl"
+          title="Configure a different AO Compute Unit URL that serves as the source for the Gateway Address Registry."
+          >AR.IO Process ID:</label
+        >
+        <input
+          type="text"
+          id="aoCuUrl"
+          placeholder="e.g. https://cu.ardrive.io"
+        />
+        <button id="saveAoCuUrl">✔</button>
       </div>
     </div>
     <button id="showGateways">Gateway Address Registry</button>
