--- a/src/popup.html
+++ b/src/popup.html
@@ -141,7 +141,7 @@
         <label
           for="aoCuUrl"
           title="Configure a different AO Compute Unit URL that serves as the source for the Gateway Address Registry."
-          >AR.IO Process ID:</label
+          >AO CU Url:</label
         >
         <input
           type="text"
@@ -166,18 +166,6 @@
           >
         </p>
         <p
-          title="How often this gateway receives AR.IO Network protocol rewards."
-        >
-          <strong>Gateway Reward Ratio:</strong>
-          <span id="modal-gateway-grr">placeholder_gateway_reward_ratio</span>
-        </p>
-        <p
-          title="How often this gateway receives AR.IO Network protocol rewards for observing and reporting on the network."
-        >
-          <strong>Observer Reward Ratio:</strong>
-          <span id="modal-gateway-orr">placeholder_observer_reward_ratio</span>
-        </p>
-        <p
           title="The unique wallet address of the gateway. Click to view details on from Viewblock."
         >
           <strong>Gateway Address:</strong>
@@ -191,6 +179,12 @@
           <strong>Total Stake:</strong>
           <span id="modal-total-stake">placeholder_stake_value</span>
         </p>
+        <p
+        title="The average response time for this gateway."
+      >
+        <strong>Avg Response Time:</strong>
+        <span id="modal-gateway-avg-response-time">placeholder_gateway_average_response_time</span>
+      </p>
         <p title="When this gateway joined the network.">
           <strong>Joined Since:</strong>
           <span id="modal-start">placeholder_start_date</span>
