--- a/src/popup.html
+++ b/src/popup.html
@@ -70,6 +70,16 @@
         </select>
       </div>
       <div class="setting">
+        <label for="ensResolutionToggle" title="Enable or disable experimental ENS name resolution.">
+          Experimental ENS Resolution:
+        </label>
+        <label class="switch">
+          <input type="checkbox" id="ensResolutionToggle">
+          <span class="slider round"></span>
+        </label>
+      </div>
+      
+      <div class="setting">
         <label
           for="routingToggle"
           title="Switch the ar:// routing protocol Wayfinder uses."
